docs: 解答GraphRAG/Java/数据库原理/APOC四个问题，新建知识库4篇，更新打包指南(JRE内嵌)